--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.pitest</groupId>
+    <groupId>org.pitest</groupId>
     <artifactId>empty-jars-maven-plugin</artifactId>
     <version>${revision}</version>
     <packaging>maven-plugin</packaging>
